# cli-username

./: .flake8  .gitignore  README.md  README_RO.md  changelogs.md  config.json  pyproject.toml  username.py
.github/workflows/: ci.yml
username_generator/: __init__.py  checker.py  cli.py  config.py  core.py  exceptions.py  modifiers.py
