[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cli-username-generator"
version = "0.1.0"
authors = [
  { name="Ivan Andrei", email="andrei.ivan2025@s.utm.ro" },
]
description = "Advanced Python CLI tool for generating unique online identities."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]
[project.scripts]
generate-user = "username_generator.cli:main"
[project.urls]
"Homepage" = "https://github.com/IvanA/cli-username"
"Bug Tracker" = "https://github.com/IvanA/cli-username/issues"
